<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/detailsElementBackground"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="9">

            <TextView
                android:id="@+id/textView"
                android:layout_width="388dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/lista_compra"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:src="@drawable/carrito"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="1.0">

            <EditText
                android:id="@+id/etProducto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/producto"
                android:inputType="textPersonName"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:ems="10"
                android:hint="@string/cantidad"
                android:digits="0123456789"
                android:imeOptions="actionNext"
                android:inputType="number" />

            <EditText
                android:id="@+id/etPrecioUnitario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:ems="10"
                android:hint="@string/precio_unitario"
                android:imeOptions="actionDone"
                android:digits="0123456789."
                android:inputType="numberDecimal" />

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:background="@android:drawable/screen_background_light_transparent"
                app:srcCompat="@android:drawable/ic_menu_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#80F1E6E6"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mi_lista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/black"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/total_compra"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/txtTotalCompra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="0€"
                android:textAlignment="center"
                android:textColor="?android:attr/colorActivatedHighlight"
                android:textSize="36sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>